Project AI_Dataset_Labeling_Marketplace {
  database_type: 'PostgreSQL'
  Note: 'ER Diagram v1'
}

Table users {
  id integer [pk, increment]
  name varchar(100) [not null]
  email varchar(255) [not null, unique]
  hashed_password varchar(255) [not null]
  is_active boolean [not null, default: true]
  created_at timestamp [not null]
}

Table datasets {
  id integer [pk, increment]
  title varchar(150) [not null]
  description text [not null]
  dataset_type varchar(50) [not null]
  created_at timestamp [not null]
}

Table labeling_jobs {
  id integer [pk, increment]
  dataset_id integer [not null]
  created_by integer [not null]
  title varchar(150) [not null]
  description text [not null]
  status varchar(30) [not null, default: 'open']
  created_at timestamp [not null]
}

Table job_assignments {
  id integer [pk, increment]
  job_id integer [not null]
  worker_id integer [not null]
  status varchar(30) [not null, default: 'assigned']
  assigned_at timestamp [not null]
}

Table reviews {
  id integer [pk, increment]
  job_id integer [not null]
  reviewer_id integer [not null]
  rating integer [not null]
  comment text
  created_at timestamp [not null]
}

Ref: labeling_jobs.dataset_id > datasets.id
Ref: labeling_jobs.created_by > users.id
Ref: job_assignments.job_id > labeling_jobs.id
Ref: job_assignments.worker_id > users.id
Ref: reviews.job_id > labeling_jobs.id
Ref: reviews.reviewer_id > users.id
